Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -1763,10 +1763,10 @@
       ],
       "metadata": {
         "id": "W5BIrpOD-PeI",
-        "outputId": "e18907fa-2b22-4d1a-b251-ed40e194bd1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e18907fa-2b22-4d1a-b251-ed40e194bd1f"
       },
       "execution_count": 2,
       "outputs": [
@@ -1792,32 +1792,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "if not f:\n",
-        "  print('La condición es verdadera.')\n",
-        "else:\n",
-        "  print('La condición es falso.')"
-      ],
-      "metadata": {
-        "id": "eMOgJtWfXOHF",
-        "outputId": "6cde8eef-f0ac-4e18-a9a6-d8edda01073f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "La condición es verdadera.\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -1901,32 +1875,6 @@
     {
       "cell_type": "code",
       "source": [
-        "if nombre_1 in lista:\n",
-        "  print('El estudiane aprobó.')\n",
-        "else:\n",
-        "  print('El estudiante reprobó.')"
-      ],
-      "metadata": {
-        "id": "eoSbujD7YTrB",
-        "outputId": "7c40b2eb-af9f-42fe-e731-e88c87fbd743",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "El estudiane aprobó.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "if nombre_2 in lista:\n",
         "  print('El estudiane aprobó.')\n",
         "else:\n",
@@ -1934,10 +1882,10 @@
       ],
       "metadata": {
         "id": "hk-RhNRT-Mp7",
-        "outputId": "59d15baa-85dc-4396-81a9-2c45cdf421d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "59d15baa-85dc-4396-81a9-2c45cdf421d8"
       },
       "execution_count": 12,
       "outputs": [
@@ -1972,9 +1920,47 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "nota_1 = float(input('Digita la primera nota: '))\n",
+        "nota_2 = float(input('Digita la segunda nota: '))\n",
+        "print(f'El promedio del estudiante 1 es: {(nota_1 + nota_2)/2}')\n",
+        "\n",
+        "nota_1 = float(input('Digita la primera nota: '))\n",
+        "nota_2 = float(input('Digita la segunda nota: '))\n",
+        "print(f'El promedio del estudiante 2 es: {(nota_1 + nota_2)/2}')\n",
+        "\n",
+        "nota_1 = float(input('Digita la primera nota: '))\n",
+        "nota_2 = float(input('Digita la segunda nota: '))\n",
+        "print(f'El promedio del estudiante 3 es: {(nota_1 + nota_2)/2}')"
+      ],
+      "metadata": {
+        "id": "xcx21IGT9qA0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "60d610da-42ab-4525-f49a-8e2bad1dd6ec"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digita la primera nota: 6.5\n",
+            "Digita la segunda nota: 8.5\n",
+            "El promedio del estudiante 1 es: 7.5\n",
+            "Digita la primera nota: 8.65\n",
+            "Digita la segunda nota: 10\n",
+            "El promedio del estudiante 2 es: 9.325\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "xcx21IGT9qA0"
+        "id": "p3FjQ4Z_b5jV"
       },
       "execution_count": null,
       "outputs": []
