Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -1957,33 +1957,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "p3FjQ4Z_b5jV"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Wtbiy9Ay9rGJ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Yfyz4anY9rIr"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "Ahora imaginemos una situación en que no son tan solo 3 estudiantes, sino 100 estudiantes. No sería nada interesante repetir el mismo código 100 veces, sino **ejecutar el mismo código 100 veces**.\n",
@@ -2023,18 +1996,14 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "contador = 1\n",
+        "while contador < 10:\n",
+        "  print(contador)\n",
+        "  contador = contador + 1"
+      ],
       "metadata": {
         "id": "Hd0ZSWxD9wCD"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "miFHNqp29nOL"
       },
       "execution_count": null,
       "outputs": []
