Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -1750,7 +1750,7 @@
       "metadata": {
         "id": "DFKmpvmS-Pa6"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1768,7 +1768,7 @@
         },
         "outputId": "e18907fa-2b22-4d1a-b251-ed40e194bd1f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1857,7 +1857,7 @@
       "metadata": {
         "id": "gPPN9BCT-Mki"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1869,7 +1869,7 @@
       "metadata": {
         "id": "GINbG3Fa-Mnb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1887,7 +1887,7 @@
         },
         "outputId": "59d15baa-85dc-4396-81a9-2c45cdf421d8"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2000,13 +2000,34 @@
         "contador = 1\n",
         "while contador < 10:\n",
         "  print(contador)\n",
-        "  contador = contador + 1"
+        "  contador = contador + 1\n",
+        "  #contador += 1"
       ],
       "metadata": {
-        "id": "Hd0ZSWxD9wCD"
+        "id": "Hd0ZSWxD9wCD",
+        "outputId": "dfae0be9-2d17-4499-d128-6253aafdbe9d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2019,12 +2040,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "contador = 1\n",
+        "while contador <= 3:\n",
+        "    nota_1 = float(input('Digita la primera nota: '))\n",
+        "    nota_2 = float(input('Digita la segunda nota: '))\n",
+        "    print(f'El promedio del estudiante 1 es: {(nota_1 + nota_2)/2}')\n",
+        "    contador += 1\n"
+      ],
       "metadata": {
-        "id": "9T5eCLFx9wk6"
+        "id": "9T5eCLFx9wk6",
+        "outputId": "e8a735a2-d485-4c90-de51-1ea9ead96637",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digita la primera nota: 8.5\n",
+            "Digita la segunda nota: 7\n",
+            "El promedio del estudiante 1 es: 7.75\n",
+            "Digita la primera nota: 6.5\n",
+            "Digita la segunda nota: 10\n",
+            "El promedio del estudiante 1 es: 8.25\n",
+            "Digita la primera nota: 9\n",
+            "Digita la segunda nota: 7\n",
+            "El promedio del estudiante 1 es: 8.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
