Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -2010,7 +2010,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2055,7 +2055,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2204,9 +2204,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fbee2eb5-265e-4b5b-badf-a0dd9331074b"
+        "outputId": "166033ba-bd2f-479a-ecae-7b0939d75992"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2216,18 +2216,35 @@
             ]
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 1
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type (lista)"
+      ],
       "metadata": {
-        "id": "DO2ubP9N9D_2"
+        "id": "DO2ubP9N9D_2",
+        "outputId": "5a042baf-1969-4179-e192-34bd69dc81da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2263,21 +2280,81 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type (lista[0])"
+      ],
       "metadata": {
-        "id": "4hco1Zqy88Kw"
+        "id": "4hco1Zqy88Kw",
+        "outputId": "d2857011-1f0a-4d75-f961-816b3bb123cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type (lista[1])"
+      ],
       "metadata": {
-        "id": "M8lH0I2288Ph"
+        "id": "M8lH0I2288Ph",
+        "outputId": "e2fabed5-c934-4908-85e1-d4a03a09eb9f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type (lista[-1])"
+      ],
+      "metadata": {
+        "id": "z2csuGYyUsh6",
+        "outputId": "05e47e86-9775-4a17-d517-ee3382baef48",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2290,12 +2367,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for elemento in lista:\n",
+        "    print(elemento)"
+      ],
       "metadata": {
-        "id": "rBx4Yu1786Sy"
+        "id": "rBx4Yu1786Sy",
+        "outputId": "5e038584-44bd-4441-d995-ff3708d6dbc6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Penélope Camacho\n",
+            "9.5\n",
+            "9.0\n",
+            "9.7\n",
+            "True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
