Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -2227,10 +2227,10 @@
       ],
       "metadata": {
         "id": "DO2ubP9N9D_2",
-        "outputId": "5a042baf-1969-4179-e192-34bd69dc81da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5a042baf-1969-4179-e192-34bd69dc81da"
       },
       "execution_count": 2,
       "outputs": [
@@ -2285,10 +2285,10 @@
       ],
       "metadata": {
         "id": "4hco1Zqy88Kw",
-        "outputId": "d2857011-1f0a-4d75-f961-816b3bb123cb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d2857011-1f0a-4d75-f961-816b3bb123cb"
       },
       "execution_count": 8,
       "outputs": [
@@ -2311,10 +2311,10 @@
       ],
       "metadata": {
         "id": "M8lH0I2288Ph",
-        "outputId": "e2fabed5-c934-4908-85e1-d4a03a09eb9f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e2fabed5-c934-4908-85e1-d4a03a09eb9f"
       },
       "execution_count": 9,
       "outputs": [
@@ -2336,11 +2336,11 @@
         "type (lista[-1])"
       ],
       "metadata": {
-        "id": "z2csuGYyUsh6",
-        "outputId": "05e47e86-9775-4a17-d517-ee3382baef48",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "z2csuGYyUsh6",
+        "outputId": "05e47e86-9775-4a17-d517-ee3382baef48"
       },
       "execution_count": 10,
       "outputs": [
@@ -2373,10 +2373,10 @@
       ],
       "metadata": {
         "id": "rBx4Yu1786Sy",
-        "outputId": "5e038584-44bd-4441-d995-ff3708d6dbc6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5e038584-44bd-4441-d995-ff3708d6dbc6"
       },
       "execution_count": 14,
       "outputs": [
@@ -2404,21 +2404,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista[2] = 10.0"
+      ],
       "metadata": {
         "id": "bVPoZg668z3T"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista"
+      ],
       "metadata": {
-        "id": "Jo_PBQ0g8z7D"
+        "id": "Jo_PBQ0g8z7D",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dd462b86-4769-4888-b8b2-760ece357d21"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Penélope Camacho', 9.5, 10.0, 9.7, True]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2431,12 +2450,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio = (lista[1]+lista[2]+lista[3])/3\n",
+        "promedio"
+      ],
       "metadata": {
-        "id": "SIH61Rrb8yv4"
+        "id": "SIH61Rrb8yv4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0e90a312-b771-4d65-c826-cac4789f6ff3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9.733333333333333"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "markdown",
