--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -2499,12 +2499,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "len(lista)"
+      ],
       "metadata": {
-        "id": "6q1Tmm7P8wQf"
+        "id": "6q1Tmm7P8wQf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a5cf15df-66f6-4533-8eac-d4f455d9b3f3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2519,21 +2536,107 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista[0:2]"
+      ],
       "metadata": {
-        "id": "NctvJTTU8uV9"
+        "id": "NctvJTTU8uV9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2e5f81e9-cc52-4a61-d8ab-b9e3610c6cc9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Penélope Camacho', 9.5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista[:3]"
+      ],
       "metadata": {
-        "id": "bQZUwldj8uY2"
+        "id": "bQZUwldj8uY2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5ce9c54f-aca3-4a83-82d4-bac9f6f4ddb2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Penélope Camacho', 9.5, 10.0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista [3:]"
+      ],
+      "metadata": {
+        "id": "ANTHiJl4mBDH",
+        "outputId": "92ff38e4-6569-4376-94ca-741e11adc86f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[9.7, True]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista[:]"
+      ],
+      "metadata": {
+        "id": "y9rYIBB8mLTI",
+        "outputId": "ba5e26b0-38ac-4192-def0-f15656ac2aed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Penélope Camacho', 9.5, 10.0, 9.7, True]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2548,21 +2651,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista.append(promedio)"
+      ],
       "metadata": {
         "id": "_Q0oODwa8spC"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista"
+      ],
       "metadata": {
-        "id": "RM894r2M8sse"
+        "id": "RM894r2M8sse",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c1454ab0-1931-448f-f877-b2eeb53d5946"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Penélope Camacho', 9.5, 10.0, 9.7, True, 9.733333333333333]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2579,21 +2701,53 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista.extend([10.0,8.0,9.0])"
+      ],
       "metadata": {
         "id": "6Zk2MpMw8rQc"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista"
+      ],
       "metadata": {
-        "id": "NnoKkoWb8rTQ"
+        "id": "NnoKkoWb8rTQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6b709e87-38f2-41df-a205-f01e9800096a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Penélope Camacho', 9.5, 10.0, 9.7, True, 9.733333333333333, 10.0, 8.0, 9.0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### [`extend()`](https://docs.python.org/3/tutorial/datastructures.html#:~:text=list.extend(iterable))\n",
+        "\n",
+        "Añade varios elementos al final de la lista.\n",
+        "\n",
+        "Añadiremos las notas `[10.0,8.0,9.0]` En la lista de Penélope Camacho."
+      ],
+      "metadata": {
+        "id": "3hgfL7SFnJet"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2606,21 +2760,49 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista.append([10.0,8.0,9.0])"
+      ],
       "metadata": {
         "id": "u3Eub2ZL8pp3"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista"
+      ],
       "metadata": {
-        "id": "tsKK5Ne58pvN"
+        "id": "tsKK5Ne58pvN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "909a6f00-7ce4-4533-8d3c-931e2951d7bb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Penélope Camacho',\n",
+              " 9.5,\n",
+              " 10.0,\n",
+              " 9.7,\n",
+              " True,\n",
+              " 9.733333333333333,\n",
+              " 10.0,\n",
+              " 8.0,\n",
+              " 9.0,\n",
+              " [10.0, 8.0, 9.0]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2634,22 +2816,48 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [],
+      "metadata": {
+        "id": "arfjnbj0oBVl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista.remove([10.0, 8.0, 9.0])"
+      ],
       "metadata": {
         "id": "mmboODPc8nd5"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista"
+      ],
       "metadata": {
-        "id": "T_w6vVgV8nh_"
+        "id": "T_w6vVgV8nh_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8fb9f35f-d5e9-49ff-cc44-b7c75701546f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Penélope Camacho', 9.5, 10.0, 9.7, True, 9.733333333333333, 10.0, 8.0, 9.0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
     },
     {
       "cell_type": "markdown",
