Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -2887,21 +2887,57 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "diccionario = {\"llave_1\":1,\n",
+        "              \"llave_2\":2}\n",
+        "diccionario"
+      ],
       "metadata": {
-        "id": "NDHhzooE8ld5"
+        "id": "NDHhzooE8ld5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "21e93122-593e-4272-f75d-a4a120cbf2a8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'llave_1': 1, 'llave_2': 2}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(diccionario )"
+      ],
       "metadata": {
-        "id": "AVOzqzy-8lhh"
+        "id": "AVOzqzy-8lhh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4195d9fb-9ef1-4bdc-cbbd-62a5934f6a8b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2922,21 +2958,94 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante = {\n",
+        "              'matrícula': 2000168933,\n",
+        "              'día de registro': 25,\n",
+        "              'mes de registro': 10,\n",
+        "              'grupo': '2E'\n",
+        "              }\n",
+        "estudiante"
+      ],
       "metadata": {
-        "id": "0lfOu_c38jED"
+        "id": "FsnIfBZJx4sT",
+        "outputId": "18cba9c6-ff0d-4149-b351-dd1b45faf394",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'matrícula': 2000168933,\n",
+              " 'día de registro': 25,\n",
+              " 'mes de registro': 10,\n",
+              " 'grupo': '2E'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante ['matrícula']"
+      ],
       "metadata": {
-        "id": "XIuqpTTy8jHV"
+        "id": "XIuqpTTy8jHV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0feb4783-2822-4c6f-c6bc-5c756f14c088"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2000168933"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "estudiante['grupo']"
+      ],
+      "metadata": {
+        "id": "YJRmTN3fy_Er",
+        "outputId": "42be8329-aadc-491d-c738-6687e134497a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2E'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2949,21 +3058,43 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante['grupo'] = '2G'"
+      ],
       "metadata": {
         "id": "kQGlp36b8fyP"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante"
+      ],
       "metadata": {
-        "id": "DnfH_qHi8f17"
+        "id": "DnfH_qHi8f17",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "daa4a5a3-7b86-4577-b404-b89800e69fc9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'matrícula': 2000168933,\n",
+              " 'día de registro': 25,\n",
+              " 'mes de registro': 10,\n",
+              " 'grupo': '2G'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2978,21 +3109,70 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante['modalidad'] = 'EAD'"
+      ],
       "metadata": {
         "id": "EeLYdlIm8d8a"
       },
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante"
+      ],
       "metadata": {
-        "id": "olDIavsm8d_o"
+        "id": "olDIavsm8d_o",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6d06e86d-82f9-488e-aaaf-f6cfc7b76134"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'matrícula': 2000168933,\n",
+              " 'día de registro': 25,\n",
+              " 'mes de registro': 10,\n",
+              " 'grupo': '2G',\n",
+              " 'modalidad': 'EAD'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(estudiante)"
+      ],
+      "metadata": {
+        "id": "avcLRoNR0-ut",
+        "outputId": "b5c62984-9d7d-405a-876f-ab52cff3db8a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
     },
     {
       "cell_type": "markdown",
