Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -2138,24 +2138,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "KkL1wUIj9jL4"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "uXIZnLSr9jOu"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# Estructuras de datos"
@@ -2968,11 +2950,11 @@
         "estudiante"
       ],
       "metadata": {
-        "id": "FsnIfBZJx4sT",
-        "outputId": "18cba9c6-ff0d-4149-b351-dd1b45faf394",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FsnIfBZJx4sT",
+        "outputId": "18cba9c6-ff0d-4149-b351-dd1b45faf394"
       },
       "execution_count": 39,
       "outputs": [
@@ -3023,12 +3005,12 @@
         "estudiante['grupo']"
       ],
       "metadata": {
-        "id": "YJRmTN3fy_Er",
-        "outputId": "42be8329-aadc-491d-c738-6687e134497a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "YJRmTN3fy_Er",
+        "outputId": "42be8329-aadc-491d-c738-6687e134497a"
       },
       "execution_count": 44,
       "outputs": [
@@ -3154,11 +3136,11 @@
         "len(estudiante)"
       ],
       "metadata": {
-        "id": "avcLRoNR0-ut",
-        "outputId": "b5c62984-9d7d-405a-876f-ab52cff3db8a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "avcLRoNR0-ut",
+        "outputId": "b5c62984-9d7d-405a-876f-ab52cff3db8a"
       },
       "execution_count": 49,
       "outputs": [
@@ -3195,21 +3177,62 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante.pop('grupo')"
+      ],
       "metadata": {
-        "id": "ZsSCZx6G8b-T"
+        "id": "ZsSCZx6G8b-T",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "76041aae-0d77-4d1c-f78c-81edf0fee901"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2G'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante"
+      ],
       "metadata": {
-        "id": "7lQ8_jpi8cBR"
+        "id": "7lQ8_jpi8cBR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "66e0f94a-b142-471b-b310-8bca3e9acb49"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'matrícula': 2000168933,\n",
+              " 'día de registro': 25,\n",
+              " 'mes de registro': 10,\n",
+              " 'modalidad': 'EAD'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3223,12 +3246,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante.items()"
+      ],
       "metadata": {
-        "id": "ncdycLV08an7"
+        "id": "ncdycLV08an7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "af25299e-1b5c-4251-8884-6e0ec5ec4239"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_items([('matrícula', 2000168933), ('día de registro', 25), ('mes de registro', 10), ('modalidad', 'EAD')])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3242,12 +3282,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante.keys()"
+      ],
       "metadata": {
-        "id": "eZo0biaM8ZVs"
+        "id": "eZo0biaM8ZVs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8a0a7132-4298-4acb-ca43-ab1a0daa7a63"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys(['matrícula', 'día de registro', 'mes de registro', 'modalidad'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3261,12 +3318,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante.values()"
+      ],
       "metadata": {
-        "id": "-NxRT9C18Yvo"
+        "id": "-NxRT9C18Yvo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d63d249f-2646-4a6f-98a4-eebf97dd243a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values([2000168933, 25, 10, 'EAD'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3279,21 +3353,57 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for llave in estudiante.keys():\n",
+        "    print(llave)"
+      ],
       "metadata": {
-        "id": "NYcjU-Ip8Xan"
+        "id": "NYcjU-Ip8Xan",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4344c3e8-4064-436e-dc0b-9daf06d68248"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "matrícula\n",
+            "día de registro\n",
+            "mes de registro\n",
+            "modalidad\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for llave, valor in estudiante.items():\n",
+        "    print(llave,'-->', valor)"
+      ],
       "metadata": {
-        "id": "aAnpP1Wv8XfJ"
+        "id": "aAnpP1Wv8XfJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0eaf2f99-89fa-4ebe-dedb-b03ba4a3da39"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "matrícula --> 2000168933\n",
+            "día de registro --> 25\n",
+            "mes de registro --> 10\n",
+            "modalidad --> EAD\n"
+          ]
+        }
+      ]
     }
   ]
 }
