Se creó con Colab

--- a/python_para_data_science.ipynb
+++ b/python_para_data_science.ipynb
@@ -92,10 +92,10 @@
       ],
       "metadata": {
         "id": "Rv5sIo7NM5VS",
-        "outputId": "94f1f9fa-1ade-4f17-a485-66cde105e659",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "94f1f9fa-1ade-4f17-a485-66cde105e659"
       },
       "execution_count": 1,
       "outputs": [
@@ -120,12 +120,40 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "matplotlib.__version__"
+      ],
+      "metadata": {
+        "id": "84b8nwps_Bqx",
+        "outputId": "f55331f2-2add-4cf0-fa7b-2bf8f2e38ac2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'3.10.0'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "REYsDRqHM6hN"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "7GJb9nmc-1f7"
+      }
     },
     {
       "cell_type": "markdown",
@@ -138,11 +166,13 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import matplotlib"
+      ],
       "metadata": {
         "id": "_xUxLlZFM728"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
