Se creó con Colab

--- a/python_para_data_science.ipynb
+++ b/python_para_data_science.ipynb
@@ -227,12 +227,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "ORsL_R5Z_TFP",
-        "outputId": "1d34d8a7-bb16-4dbb-89e4-1cec733412c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
-        }
+        },
+        "id": "ORsL_R5Z_TFP",
+        "outputId": "1d34d8a7-bb16-4dbb-89e4-1cec733412c5"
       },
       "execution_count": 5,
       "outputs": [
@@ -261,20 +261,24 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiantes_2 = ['Juan', 'Maria', 'José', 'Erica']"
+      ],
       "metadata": {
         "id": "Y4o2AvhWNBdM"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import random"
+      ],
       "metadata": {
         "id": "9fXfsVnANBiG"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -292,21 +296,45 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from random import choice"
+      ],
       "metadata": {
         "id": "a2zJCXNUND9X"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante = choice(estudiantes_2)\n",
+        "estudiante"
+      ],
       "metadata": {
-        "id": "2Yvr71PIND_r"
+        "id": "2Yvr71PIND_r",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "767d01a8-2b0c-4c3b-c3d5-db13e23c30c3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'José'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "code",
