Se creó con Colab

--- a/python_para_data_science.ipynb
+++ b/python_para_data_science.ipynb
@@ -338,12 +338,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "help(choice)"
+      ],
       "metadata": {
-        "id": "UFfZz4CxNGjU"
+        "id": "DvxCQ27wDifK",
+        "outputId": "48267a2f-3324-4367-908b-8062af5bdf72",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on method choice in module random:\n",
+            "\n",
+            "choice(seq) method of random.Random instance\n",
+            "    Choose a random element from a non-empty sequence.\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
